:art: Fix all token table alignment

--- a/src/modules/wallet/components/TokenRow/TokenRow.css
+++ b/src/modules/wallet/components/TokenRow/TokenRow.css
@@ -63,13 +63,13 @@
   padding: 0px 10px 0px 10px;
   display: flex;
   align-items: center;
-  color: var(--color-content-light) !important;
 
+  &,
   & span {
-    @mixin headingSmall;
-
     color: var(--color-content-light) !important;
-    font-size: var(--paragraph-font-size-l) !important;
+    font-size: var(--subtitle-font-size-s) !important;
+    font-weight: var(--font-weight-semi-bold) !important;
+    font-family: var(--heading-font) !important;
   }
 }
 
